--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,17 @@
       name="description"
       content="Simple Tic Tac Toe Game"
     />
+    <link rel="manifest" href="manifest.json">
     <title>Tic Tac Toe</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script>
+      if('serviceWorker' in navigator){
+              navigator.serviceWorker.register('/service-worker.js')
+            }
+
+    </script>
   </body>
 </html>
